Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-6848

[C++] Specify -std=c++11 instead of -std=gnu++11 when building

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 1.0.0
    • C++

    Description

      Relevant discussion:

      https://lists.apache.org/thread.html/5807e65d865c1736b3a7a32653ca8bb405d719eb13b8a10b6fe0e904@%3Cdev.arrow.apache.org%3E

      in addition to

      set(CMAKE_CXX_STANDARD 11)

      , we also need to

      set(CMAKE_CXX_EXTENSIONS OFF)

      in order to turn off compiler-specific extensions (with GCC, it's -std=gnu++11)

       

      This is supposed to be a no-op, because Arrow builds fine with other compilers (Clang-LLVM / MSCV). But opening this bug to track any issues with flipping the switch.

       

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              brillsp Zhuo Peng
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 5.5h
                  5.5h