ARROW-6848: [C++] Support building libraries targeting C++14 or higher

This seemed pretty simple. The C++ standard targeted by default is still C++11 but some users might want to target a higher standard (e.g. to get C++17 `std::string_view`). I also disabled use of `-std=gnu++11`. Not sure what are the implications of this but the test suite seemed fine locally.

Closes #7459 from wesm/ARROW-6848

Lead-authored-by: Wes McKinney <wesm@apache.org>
Co-authored-by: Sutou Kouhei <kou@clear-code.com>
Signed-off-by: Sutou Kouhei <kou@clear-code.com>